# Ruff-Action

./: .bumpversion.toml  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  ruff.r2.yml  ruff.yml
.github/workflows/: ruff.yml
docs/: github.md  gitlab.md
templates/: ruff.yml
tests/ruff_destructive_project/: pyproject.toml
tests/ruff_negative_project/: pyproject.toml
tests/ruff_negative_project/src/ruff_negative_project/: __init__.py  main.py
tests/ruff_project/: pyproject.toml
tests/ruff_project/src/ruff_project/: __init__.py
