[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "ruff_destructive_project"
version = "0.1.0"
authors = [
    {email = "author.name@example.com", name = "Author Name"},
]
description = "A description of what the package is for."

[tool.ruff.lint]
select = ["ANN", "C90", "D2", "D3", "D4", "E", "F", "I", "N", "RUF", "UP", "W"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]
